--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-lottie-player": "^1.3.3",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "use-sound": "^4.0.1",
